# RAG-Tutorials

./: .gitignore  README.md  db_setup.py  ecommerce.db  multi-agent-system.ipynb  pyproject.toml  rag_from_scatch.ipynb  rag_with_langchain.ipynb  requirements.txt
chroma_db/: chroma.sqlite3
src/: .env
src/db/: ecommerce.db
src/db/chroma_db/: chroma.sqlite3
src/notebooks/: multi-agent-system.ipynb  rag_from_scatch.ipynb  rag_with_langchain.ipynb
src/notebooks/chroma_db/: chroma.sqlite3
